src/IFC-gen/ANTLR/ExpressParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ./ANTLR/Express.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Express {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class ExpressParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, BOOLEAN=9, 
		FIXED=10, INTEGER=11, LIST=12, LOGICAL=13, REAL=14, SET=15, STRING_FIXED=16, 
		STRING=17, ABSTRACT=18, AND=19, DERIVE=20, ENTITY=21, END_ENTITY=22, ENUMERATION=23, 
		FOR=24, IN=25, INVERSE=26, OF=27, ONEOF=28, OPTIONAL=29, OR=30, SCHEMA=31, 
		END_SCHEMA=32, SELF=33, SUBTYPE=34, SUPERTYPE=35, TYPE=36, END_TYPE=37, 
		UNIQUE=38, WHERE=39, EXISTS=40, SIZEOF=41, QUERY=42, TYPEOF=43, IfcType=44, 
		Version=45, Integer=46, LP=47, RP=48, LB=49, RB=50, COLON=51, PIPE=52, 
		NOT=53, EQ=54, GT=55, LT=56, GTE=57, LTE=58, NEQ=59, MUL=60, DIV=61, ADD=62, 
		SUB=63, DEF=64, INIT=65, Float=66, SetAccesor=67, PropertyAccessor=68, 
		Identifier=69, WS=70, NL=71, Comments=72, Rules=73, Functions=74;
	public const int
		RULE_schema_declaration = 0, RULE_type_declaration = 1, RULE_value_type = 2, 
		RULE_set_declaration = 3, RULE_list_declaration = 4, RULE_enumeration = 5, 
		RULE_id_list = 6, RULE_enum_id_list = 7, RULE_type_declaration_body = 8, 
		RULE_rule_declaration = 9, RULE_rule = 10, RULE_expr = 11, RULE_func_call_expr = 12, 
		RULE_func_parameters = 13, RULE_query_expr = 14, RULE_bool_expr = 15, 
		RULE_equation_expr = 16, RULE_mult_expr = 17, RULE_div_expr = 18, RULE_atom = 19, 
		RULE_self_property = 20, RULE_entity_declaration = 21, RULE_entity_declaration_body = 22, 
		RULE_supertype_declaration = 23, RULE_subtype_declaration = 24, RULE_attribute = 25, 
		RULE_definition = 26, RULE_one_of = 27, RULE_inverse_declaration = 28, 
		RULE_derive_declaration = 29, RULE_unique_declaration = 30, RULE_unique_statement = 31, 
		RULE_function_declaration = 32, RULE_function_declaration_body = 33;
	public static readonly string[] ruleNames = {
		"schema_declaration", "type_declaration", "value_type", "set_declaration", 
		"list_declaration", "enumeration", "id_list", "enum_id_list", "type_declaration_body", 
		"rule_declaration", "rule", "expr", "func_call_expr", "func_parameters", 
		"query_expr", "bool_expr", "equation_expr", "mult_expr", "div_expr", "atom", 
		"self_property", "entity_declaration", "entity_declaration_body", "supertype_declaration", 
		"subtype_declaration", "attribute", "definition", "one_of", "inverse_declaration", 
		"derive_declaration", "unique_declaration", "unique_statement", "function_declaration", 
		"function_declaration_body"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'['", "'?'", "']'", "','", "'.'", "'FUNCTION'", "'END_FUNCTION'", 
		"'BOOLEAN'", "'FIXED'", "'INTEGER'", "'LIST'", "'LOGICAL'", "'REAL'", 
		"'SET'", null, "'STRING'", "'ABSTRACT'", "'AND'", "'DERIVE'", "'ENTITY'", 
		"'END_ENTITY'", "'ENUMERATION'", "'FOR'", "'IN'", "'INVERSE'", "'OF'", 
		"'ONEOF'", "'OPTIONAL'", "'OR'", "'SCHEMA'", "'END_SCHEMA'", "'SELF'", 
		"'SUBTYPE'", "'SUPERTYPE'", "'TYPE'", "'END_TYPE'", "'UNIQUE'", "'WHERE'", 
		"'EXISTS'", "'SIZEOF'", "'QUERY'", "'TYPEOF'", null, null, null, "'('", 
		"')'", "'{'", "'}'", "':'", "'|'", "'NOT'", "'='", "'>'", "'<'", "'>='", 
		"'<='", "'<>'", "'*'", "'/'", "'+'", "'-'", "':='", "'<*'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, "BOOLEAN", "FIXED", 
		"INTEGER", "LIST", "LOGICAL", "REAL", "SET", "STRING_FIXED", "STRING", 
		"ABSTRACT", "AND", "DERIVE", "ENTITY", "END_ENTITY", "ENUMERATION", "FOR", 
		"IN", "INVERSE", "OF", "ONEOF", "OPTIONAL", "OR", "SCHEMA", "END_SCHEMA", 
		"SELF", "SUBTYPE", "SUPERTYPE", "TYPE", "END_TYPE", "UNIQUE", "WHERE", 
		"EXISTS", "SIZEOF", "QUERY", "TYPEOF", "IfcType", "Version", "Integer", 
		"LP", "RP", "LB", "RB", "COLON", "PIPE", "NOT", "EQ", "GT", "LT", "GTE", 
		"LTE", "NEQ", "MUL", "DIV", "ADD", "SUB", "DEF", "INIT", "Float", "SetAccesor", 
		"PropertyAccessor", "Identifier", "WS", "NL", "Comments", "Rules", "Functions"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Express.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ExpressParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ExpressParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ExpressParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class Schema_declarationContext : ParserRuleContext {
		public ITerminalNode SCHEMA() { return GetToken(ExpressParser.SCHEMA, 0); }
		public ITerminalNode Version() { return GetToken(ExpressParser.Version, 0); }
		public ITerminalNode END_SCHEMA() { return GetToken(ExpressParser.END_SCHEMA, 0); }
		public ITerminalNode Eof() { return GetToken(ExpressParser.Eof, 0); }
		public Type_declarationContext[] type_declaration() {
			return GetRuleContexts<Type_declarationContext>();
		}
		public Type_declarationContext type_declaration(int i) {
			return GetRuleContext<Type_declarationContext>(i);
		}
		public Entity_declarationContext[] entity_declaration() {
			return GetRuleContexts<Entity_declarationContext>();
		}
		public Entity_declarationContext entity_declaration(int i) {
			return GetRuleContext<Entity_declarationContext>(i);
		}
		public Function_declarationContext[] function_declaration() {
			return GetRuleContexts<Function_declarationContext>();
		}
		public Function_declarationContext function_declaration(int i) {
			return GetRuleContext<Function_declarationContext>(i);
		}
		public Schema_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_schema_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.EnterSchema_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.ExitSchema_declaration(this);
		}
	}

	[RuleVersion(0)]
	public Schema_declarationContext schema_declaration() {
		Schema_declarationContext _localctx = new Schema_declarationContext(Context, State);
		EnterRule(_localctx, 0, RULE_schema_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68; Match(SCHEMA);
			State = 69; Match(Version);
			State = 70; Match(T__0);
			State = 74;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==TYPE) {
				{
				{
				State = 71; type_declaration();
				}
				}
				State = 76;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ENTITY) {
				{
				{
				State = 77; entity_declaration();
				}
				}
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 86;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__6) {
				{
				{
				State = 83; function_declaration();
				}
				}
				State = 88;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 89; Match(END_SCHEMA);
			State = 90; Match(T__0);
			State = 91; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Type_declarationContext : ParserRuleContext {
		public ITerminalNode TYPE() { return GetToken(ExpressParser.TYPE, 0); }
		public ITerminalNode Identifier() { return GetToken(ExpressParser.Identifier, 0); }
		public ITerminalNode EQ() { return GetToken(ExpressParser.EQ, 0); }
		public ITerminalNode END_TYPE() { return GetToken(ExpressParser.END_TYPE, 0); }
		public Value_typeContext value_type() {
			return GetRuleContext<Value_typeContext>(0);
		}
		public EnumerationContext enumeration() {
			return GetRuleContext<EnumerationContext>(0);
		}
		public Type_declaration_bodyContext type_declaration_body() {
			return GetRuleContext<Type_declaration_bodyContext>(0);
		}
		public Type_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.EnterType_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.ExitType_declaration(this);
		}
	}

	[RuleVersion(0)]
	public Type_declarationContext type_declaration() {
		Type_declarationContext _localctx = new Type_declarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_type_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93; Match(TYPE);
			State = 94; Match(Identifier);
			State = 95; Match(EQ);
			State = 98;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case BOOLEAN:
			case FIXED:
			case INTEGER:
			case LIST:
			case LOGICAL:
			case REAL:
			case SET:
			case STRING_FIXED:
			case STRING:
			case Identifier:
				{
				State = 96; value_type();
				}
				break;
			case ENUMERATION:
				{
				State = 97; enumeration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 100; Match(T__0);
			State = 102;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHERE) {
				{
				State = 101; type_declaration_body();
				}
			}

			State = 104; Match(END_TYPE);
			State = 105; Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Value_typeContext : ParserRuleContext {
		public ITerminalNode BOOLEAN() { return GetToken(ExpressParser.BOOLEAN, 0); }
		public ITerminalNode FIXED() { return GetToken(ExpressParser.FIXED, 0); }
		public ITerminalNode INTEGER() { return GetToken(ExpressParser.INTEGER, 0); }
		public ITerminalNode LOGICAL() { return GetToken(ExpressParser.LOGICAL, 0); }
		public ITerminalNode REAL() { return GetToken(ExpressParser.REAL, 0); }
		public ITerminalNode STRING() { return GetToken(ExpressParser.STRING, 0); }
		public ITerminalNode STRING_FIXED() { return GetToken(ExpressParser.STRING_FIXED, 0); }
		public Set_declarationContext set_declaration() {
			return GetRuleContext<Set_declarationContext>(0);
		}
		public List_declarationContext list_declaration() {
			return GetRuleContext<List_declarationContext>(0);
		}
		public ITerminalNode Identifier() { return GetToken(ExpressParser.Identifier, 0); }
		public Value_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value_type; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.EnterValue_type(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.ExitValue_type(this);
		}
	}

	[RuleVersion(0)]
	public Value_typeContext value_type() {
		Value_typeContext _localctx = new Value_typeContext(Context, State);
		EnterRule(_localctx, 4, RULE_value_type);
		try {
			State = 117;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case BOOLEAN:
				EnterOuterAlt(_localctx, 1);
				{
				State = 107; Match(BOOLEAN);
				}
				break;
			case FIXED:
				EnterOuterAlt(_localctx, 2);
				{
				State = 108; Match(FIXED);
				}
				break;
			case INTEGER:
				EnterOuterAlt(_localctx, 3);
				{
				State = 109; Match(INTEGER);
				}
				break;
			case LOGICAL:
				EnterOuterAlt(_localctx, 4);
				{
				State = 110; Match(LOGICAL);
				}
				break;
			case REAL:
				EnterOuterAlt(_localctx, 5);
				{
				State = 111; Match(REAL);
				}
				break;
			case STRING:
				EnterOuterAlt(_localctx, 6);
				{
				State = 112; Match(STRING);
				}
				break;
			case STRING_FIXED:
				EnterOuterAlt(_localctx, 7);
				{
				State = 113; Match(STRING_FIXED);
				}
				break;
			case SET:
				EnterOuterAlt(_localctx, 8);
				{
				State = 114; set_declaration();
				}
				break;
			case LIST:
				EnterOuterAlt(_localctx, 9);
				{
				State = 115; list_declaration();
				}
				break;
			case Identifier:
				EnterOuterAlt(_localctx, 10);
				{
				State = 116; Match(Identifier);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Set_declarationContext : ParserRuleContext {
		public ITerminalNode SET() { return GetToken(ExpressParser.SET, 0); }
		public ITerminalNode[] Integer() { return GetTokens(ExpressParser.Integer); }
		public ITerminalNode Integer(int i) {
			return GetToken(ExpressParser.Integer, i);
		}
		public ITerminalNode COLON() { return GetToken(ExpressParser.COLON, 0); }
		public ITerminalNode OF() { return GetToken(ExpressParser.OF, 0); }
		public ITerminalNode[] Identifier() { return GetTokens(ExpressParser.Identifier); }
		public ITerminalNode Identifier(int i) {
			return GetToken(ExpressParser.Identifier, i);
		}
		public ITerminalNode FOR() { return GetToken(ExpressParser.FOR, 0); }
		public Set_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_set_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.EnterSet_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.ExitSet_declaration(this);
		}
	}

	[RuleVersion(0)]
	public Set_declarationContext set_declaration() {
		Set_declarationContext _localctx = new Set_declarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_set_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119; Match(SET);
			State = 120; Match(T__1);
			State = 121; Match(Integer);
			State = 122; Match(COLON);
			State = 123;
			_la = TokenStream.LA(1);
			if ( !(_la==T__2 || _la==Integer) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 124; Match(T__3);
			State = 125; Match(OF);
			State = 126; Match(Identifier);
			State = 129;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==FOR) {
				{
				State = 127; Match(FOR);
				State = 128; Match(Identifier);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class List_declarationContext : ParserRuleContext {
		public ITerminalNode LIST() { return GetToken(ExpressParser.LIST, 0); }
		public ITerminalNode[] Integer() { return GetTokens(ExpressParser.Integer); }
		public ITerminalNode Integer(int i) {
			return GetToken(ExpressParser.Integer, i);
		}
		public ITerminalNode COLON() { return GetToken(ExpressParser.COLON, 0); }
		public ITerminalNode OF() { return GetToken(ExpressParser.OF, 0); }
		public ITerminalNode Identifier() { return GetToken(ExpressParser.Identifier, 0); }
		public List_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_list_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.EnterList_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.ExitList_declaration(this);
		}
	}

	[RuleVersion(0)]
	public List_declarationContext list_declaration() {
		List_declarationContext _localctx = new List_declarationContext(Context, State);
		EnterRule(_localctx, 8, RULE_list_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 131; Match(LIST);
			State = 132; Match(T__1);
			State = 133; Match(Integer);
			State = 134; Match(COLON);
			State = 135;
			_la = TokenStream.LA(1);
			if ( !(_la==T__2 || _la==Integer) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 136; Match(T__3);
			State = 137; Match(OF);
			State = 138; Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnumerationContext : ParserRuleContext {
		public ITerminalNode ENUMERATION() { return GetToken(ExpressParser.ENUMERATION, 0); }
		public ITerminalNode OF() { return GetToken(ExpressParser.OF, 0); }
		public ITerminalNode LP() { return GetToken(ExpressParser.LP, 0); }
		public Enum_id_listContext enum_id_list() {
			return GetRuleContext<Enum_id_listContext>(0);
		}
		public ITerminalNode RP() { return GetToken(ExpressParser.RP, 0); }
		public EnumerationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enumeration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.EnterEnumeration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.ExitEnumeration(this);
		}
	}

	[RuleVersion(0)]
	public EnumerationContext enumeration() {
		EnumerationContext _localctx = new EnumerationContext(Context, State);
		EnterRule(_localctx, 10, RULE_enumeration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 140; Match(ENUMERATION);
			State = 141; Match(OF);
			State = 142; Match(LP);
			State = 143; enum_id_list();
			State = 144; Match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Id_listContext : ParserRuleContext {
		public ITerminalNode[] Identifier() { return GetTokens(ExpressParser.Identifier); }
		public ITerminalNode Identifier(int i) {
			return GetToken(ExpressParser.Identifier, i);
		}
		public Id_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_id_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.EnterId_list(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.ExitId_list(this);
		}
	}

	[RuleVersion(0)]
	public Id_listContext id_list() {
		Id_listContext _localctx = new Id_listContext(Context, State);
		EnterRule(_localctx, 12, RULE_id_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 146; Match(Identifier);
			State = 151;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__4) {
				{
				{
				State = 147; Match(T__4);
				State = 148; Match(Identifier);
				}
				}
				State = 153;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Enum_id_listContext : ParserRuleContext {
		public ITerminalNode[] Identifier() { return GetTokens(ExpressParser.Identifier); }
		public ITerminalNode Identifier(int i) {
			return GetToken(ExpressParser.Identifier, i);
		}
		public Enum_id_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enum_id_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.EnterEnum_id_list(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.ExitEnum_id_list(this);
		}
	}

	[RuleVersion(0)]
	public Enum_id_listContext enum_id_list() {
		Enum_id_listContext _localctx = new Enum_id_listContext(Context, State);
		EnterRule(_localctx, 14, RULE_enum_id_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 154; Match(Identifier);
			State = 159;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__4) {
				{
				{
				State = 155; Match(T__4);
				State = 156; Match(Identifier);
				}
				}
				State = 161;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Type_declaration_bodyContext : ParserRuleContext {
		public Rule_declarationContext rule_declaration() {
			return GetRuleContext<Rule_declarationContext>(0);
		}
		public Type_declaration_bodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type_declaration_body; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.EnterType_declaration_body(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.ExitType_declaration_body(this);
		}
	}

	[RuleVersion(0)]
	public Type_declaration_bodyContext type_declaration_body() {
		Type_declaration_bodyContext _localctx = new Type_declaration_bodyContext(Context, State);
		EnterRule(_localctx, 16, RULE_type_declaration_body);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 162; rule_declaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
